<?xml version="1.0"?>
<package>
  <name>android_core</name>
  <version>0.5.0</version>
  <description>Android support packages for rosjava.</description>

  <url type="website">http://ros.org/wiki/android_core</url>
  <url type="repository">https://github.com/rosjava/android_core</url>
  <url type="bugtracker">https://github.com/rosjava/android_core/issues</url>
  <author>Damon Kohler</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>

  <build_export_depend>rosjava_build_tools</build_export_depend>
  <build_export_depend>rosjava_core</build_export_depend>

  <exec_depend>rosjava_build_tools</exec_depend>
  <exec_depend>rosjava_core</exec_depend>

</package>
